unpackaged/objects/Account.object
<CustomObject>
    <fields>
        <fullName>BDO__c</fullName>
        <label>BDO</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ARB</fullName>
                </value>
                <value>
                    <fullName>CalRecycle</fullName>
                </value>
                <value>
                    <fullName>DPR</fullName>
                </value>
                <value>
                    <fullName>DTSC</fullName>
                </value>
                <value>
                    <fullName>Water Board</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Email_Domain__c</fullName>
        <description>Email Domain</description>
        <label>Email Domain</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Formal_Name__c</fullName>
        <label>Formal Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Language__c</fullName>
        <label>Language</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>English</fullName>
                    <default>true</default>
                    <label>English</label>
                </value>
                <value>
                    <fullName>Spanish</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Multi_Type__c</fullName>
        <description>The existing type field only allows for one type. I think it would be better for multiple.</description>
        <label>Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Water Supplier</fullName>
                </value>
                <value>
                    <fullName>Ag Water Supply</fullName>
                </value>
                <value>
                    <fullName>Air District</fullName>
                </value>
                <value>
                    <fullName>County Agricultural Commissioner</fullName>
                </value>
                <value>
                    <fullName>CUPA</fullName>
                </value>
                <value>
                    <fullName>District/City Attorney Office</fullName>
                </value>
                <value>
                    <fullName>Division of Water Rights Partner Agency</fullName>
                </value>
                <value>
                    <fullName>DoD</fullName>
                </value>
                <value>
                    <fullName>Federal Agency</fullName>
                </value>
                <value>
                    <fullName>LEA</fullName>
                </value>
                <value>
                    <fullName>Local Law Enforcement</fullName>
                </value>
                <value>
                    <fullName>LPA</fullName>
                </value>
                <value>
                    <fullName>MS4</fullName>
                </value>
                <value>
                    <fullName>OWTS</fullName>
                </value>
                <value>
                    <fullName>Small Water Supplier</fullName>
                </value>
                <value>
                    <fullName>State Agency</fullName>
                </value>
                <value>
                    <fullName>Urban Water Supplier</fullName>
                </value>
                <value>
                    <fullName>Vector Control</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
                <value>
                    <fullName>Waste Water</fullName>
                </value>
                <value>
                    <fullName>State Water Resources Regional Board</fullName>
                </value>
                <value>
                    <fullName>SWRCB Division or Office</fullName>
                </value>
                <value>
                    <fullName>Water Quality Non-Profit</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Normalized_Name__c</fullName>
        <label>Normalized Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Test_Data__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Test Data</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>AllAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All Accounts</label>
    </listViews>
    <listViews>
        <fullName>All_CAMS_Accounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.CAMS</value>
        </filters>
        <label>All CAMS Accounts</label>
        <sharedTo>
            <group>CAMS_Users</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Business_Accounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STREET</columns>
        <columns>ACCOUNT.ADDRESS1_CITY</columns>
        <columns>ACCOUNT.ADDRESS1_ZIP</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>Multi_Type__c</columns>
        <columns>ACCOUNT.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Business_Account</value>
        </filters>
        <label>Business Accounts</label>
        <sharedTo>
            <group>CERS_Help_Desk_Development_Team</group>
            <group>CERS_Help_Desk_Technical_Managers</group>
            <group>CERS_Help_Desk_Technical_Support</group>
            <group>CERS_Help_Desk_Unified_Program</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CUPAs</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STREET</columns>
        <columns>ACCOUNT.ADDRESS1_CITY</columns>
        <columns>ACCOUNT.ADDRESS1_ZIP</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>Multi_Type__c</columns>
        <columns>ACCOUNT.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.CalEPA_Partner_Agency</value>
        </filters>
        <filters>
            <field>Multi_Type__c</field>
            <operation>includes</operation>
            <value>CUPA</value>
        </filters>
        <label>CUPAs</label>
    </listViews>
    <listViews>
        <fullName>Complainants</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>PC_EMAIL</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>PC_ADDRESS2_STREET</columns>
        <columns>PC_ADDRESS2_CITY</columns>
        <columns>PC_ADDRESS2_ZIP</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>ACCOUNT.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>PersonAccount.PersonAccount</value>
        </filters>
        <label>Complainants</label>
        <sharedTo>
            <group>Complaint_Management_Users</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Complaint_Management_External_Partners</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_CITY</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>PC_EMAIL</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>ACCOUNT.ADDRESS1_STREET</columns>
        <columns>ACCOUNT.ADDRESS1_ZIP</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>Multi_Type__c</columns>
        <columns>BDO__c</columns>
        <columns>ACCOUNT.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.CalEPA_Partner_Agency</value>
        </filters>
        <label>External Partners</label>
        <sharedTo>
            <group>Complaint_Management_Users</group>
        </sharedTo>
    </listViews>
    <recordTypes>
        <fullName>BDO</fullName>
        <active>true</active>
        <label>BDO</label>
    </recordTypes>
    <recordTypes>
        <fullName>Business_Account</fullName>
        <active>true</active>
        <label>Business Account</label>
    </recordTypes>
    <recordTypes>
        <fullName>CAMS</fullName>
        <active>true</active>
        <label>CAMS</label>
    </recordTypes>
    <recordTypes>
        <fullName>CalEPA_Partner_Agency</fullName>
        <active>true</active>
        <label>CalEPA Partner Agency</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>